@@ -107,8 +107,9 @@ function isNumeric(n) {
   return !isNaN(parseFloat(n)) && isFinite(n);
 }
 
-function coreNameToLabel(name) {
-  return name.replace(/(.*?)_shard((\d+_?)+)_replica_?[ntp]?(\d+)/, '\$1_s\$2r\$4');
+// Makes a shorter label if possible, by shortening 'shard1' to 's1' and 'replica_n2' to 'r2'
+function makeCoreLabel(collection, shard, replica) {
+  return collection + "_" + (shard + "_").replace(/shard(\d+)_/, 's\$1') + replica.replace(/replica_?[ntp]?(\d+)/, 'r\$1');
 }
 
 var nodesSubController = function($scope, Collections, System, Metrics) {
@@ -198,10 +199,11 @@ var nodesSubController = function($scope, Collections, System, Metrics) {
           for (var replicaName in replicas) {
             var core = replicas[replicaName];
             core.name = replicaName;
-            core.label = coreNameToLabel(core['core']);
+            core.replica = core['core'].replace(/.*_(replica_.*)$/, '\$1');
             core.collection = collection.name;
             core.shard = shard.name;
             core.shard_state = shard.state;
+            core.label = makeCoreLabel(core['collection'], core['shard'], core['replica']);
 
             var node_name = core['node_name'];
             var node = getOrCreateObj(node_name, nodes);
@@ -433,7 +435,7 @@ var nodesSubController = function($scope, Collections, System, Metrics) {
                   var labelState = (core['state'] !== 'active') ? core['state'] : core['shard_state'];
                   core['label'] += "_(" + labelState + ")";
                 }
-                var coreMetricName = "solr.core." + core['core'].replace(/(.*?)_(shard(\d+_?)+)_(replica.*?)/, '\$1.\$2.\$4');
+                var coreMetricName = "solr.core." + core['collection'] + "." + core['shard'] + "." + core['replica'];
                 var coreMetric = m.metrics[coreMetricName];
                 // we may not actually get metrics back for every expected core (the core may be down)
                 if (coreMetric) {
